--- a/index.html
+++ b/index.html
@@ -2,89 +2,52 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>DETRAN 3D - MERCEDES FINAL</title>
+    <title>DETRAN 3D - TESTE DE ARQUIVO</title>
     <style>
-        body { margin: 0; overflow: hidden; background: #87CEEB; font-family: sans-serif; }
-        #ui { position: absolute; top: 20px; left: 50%; transform: translateX(-50%); text-align: center; z-index: 10; }
-        .timer { font-size: 40px; font-weight: bold; color: #fff; background: rgba(0,0,0,0.8); padding: 10px 40px; border-radius: 15px; border: 2px solid #00ff44; }
-        #status { position: fixed; bottom: 20px; width: 100%; text-align: center; color: white; background: rgba(0,0,0,0.7); padding: 10px; }
+        body { margin: 0; overflow: hidden; background: #333; font-family: sans-serif; }
+        #info { position: absolute; top: 10px; width: 100%; text-align: center; color: white; z-index: 10; }
     </style>
 </head>
 <body>
-    <div id="ui"><div class="timer" id="timerDisplay">00:00.00</div></div>
-    <div id="status">Procurando Mercedes (carro.glb)...</div>
+    <div id="info">
+        <h2 id="status">Tentando carregar carro.glb...</h2>
+        <p>Se vir um CUBO VERMELHO, o arquivo do carro está com problema.</p>
+    </div>
 
     <script type="module">
         import * as THREE from 'https://cdn.skypack.dev/three@0.136.0';
         import { GLTFLoader } from 'https://cdn.skypack.dev/three@0.136.0/examples/jsm/loaders/GLTFLoader.js';
 
         const scene = new THREE.Scene();
-        scene.background = new THREE.Color(0x87CEEB);
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.set(0, 5, 10);
 
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 5000);
-        camera.position.set(0, 5, 15);
-
-        const renderer = new THREE.WebGLRenderer({ antialias: true });
+        const renderer = new THREE.WebGLRenderer();
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
         scene.add(new THREE.AmbientLight(0xffffff, 2));
-        const sun = new THREE.DirectionalLight(0xffffff, 1);
-        sun.position.set(10, 20, 10);
-        scene.add(sun);
+        scene.add(new THREE.GridHelper(100, 20));
 
-        // Grade para você saber onde está o chão
-        const grid = new THREE.GridHelper(200, 50, 0xffffff, 0x444444);
-        scene.add(grid);
+        // CRIAR UM CUBO DE RESERVA (Caso o carro falhe)
+        const geometry = new THREE.BoxGeometry(2, 2, 2);
+        const material = new THREE.MeshBasicMaterial({ color: 0xff0000 });
+        const dummyCube = new THREE.Mesh(geometry, material);
+        dummyCube.position.y = 1;
 
-        let car;
         const loader = new GLTFLoader();
-
         loader.load('carro.glb', (gltf) => {
-            car = gltf.scene;
-            
-            // --- RADAR DE ESCALA E POSIÇÃO ---
-            const box = new THREE.Box3().setFromObject(car);
-            const size = box.getSize(new THREE.Vector3());
-            const center = box.getCenter(new THREE.Vector3());
-
-            // Força o carro a ter um tamanho visível de 8 metros
-            const maxDim = Math.max(size.x, size.y, size.z);
-            const scale = 8 / maxDim; 
-            car.scale.set(scale, scale, scale);
-
-            // Traz o carro para o ponto zero (0,0,0)
-            car.position.x = -center.x * scale;
-            car.position.y = -center.y * scale + (size.y * scale / 2);
-            car.position.z = -center.z * scale;
-
-            scene.add(car);
-            document.getElementById('status').innerText = "✅ MERCEDES ENCONTRADA! Use as SETAS.";
+            // Se chegar aqui, o arquivo TEM algo dentro
+            scene.add(gltf.scene);
+            document.getElementById('status').innerText = "✅ ARQUIVO CARREGADO!";
         }, undefined, (error) => {
-            document.getElementById('status').innerHTML = "❌ ERRO: O arquivo 'carro.glb' não está no seu GitHub!";
+            // Se der erro, colocamos o cubo para você não ficar no escuro
+            scene.add(dummyCube);
+            document.getElementById('status').innerText = "❌ ARQUIVO NÃO ENCONTRADO - USANDO CUBO DE TESTE";
         });
-
-        const keys = {};
-        let startTime = Date.now();
-        window.addEventListener('keydown', e => keys[e.code] = true);
-        window.addEventListener('keyup', e => keys[e.code] = false);
 
         function animate() {
             requestAnimationFrame(animate);
-            if (car) {
-                // Movimentação (se o carro estiver de lado, vamos girar ele depois)
-                if(keys['ArrowUp']) car.translateZ(0.3); 
-                if(keys['ArrowDown']) car.translateZ(-0.2);
-                if(keys['ArrowLeft']) car.rotation.y += 0.04;
-                if(keys['ArrowRight']) car.rotation.y -= 0.04;
-
-                // Câmera segue o carro
-                const offset = new THREE.Vector3(0, 6, -15).applyMatrix4(car.matrixWorld);
-                camera.position.lerp(offset, 0.1);
-                camera.lookAt(car.position);
-            }
-            const d = new Date(Date.now() - startTime);
-            document.getElementById('timerDisplay').innerText = d.toISOString().substr(14, 8);
             renderer.render(scene, camera);
         }
         animate();
