--- a/index.html
+++ b/index.html
@@ -2,52 +2,89 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>DETRAN 3D - TESTE DE ARQUIVO</title>
+    <title>DETRAN 3D - MERCEDES AMG</title>
     <style>
-        body { margin: 0; overflow: hidden; background: #333; font-family: sans-serif; }
-        #info { position: absolute; top: 10px; width: 100%; text-align: center; color: white; z-index: 10; }
+        body { margin: 0; overflow: hidden; background: #87CEEB; font-family: sans-serif; }
+        #ui { position: absolute; top: 20px; left: 50%; transform: translateX(-50%); text-align: center; width: 100%; z-index: 10; }
+        .timer { font-size: 40px; font-weight: bold; color: #fff; background: rgba(0,0,0,0.8); padding: 10px 40px; border-radius: 15px; border: 2px solid #00ff44; }
+        #status { position: fixed; bottom: 20px; width: 100%; text-align: center; color: white; background: rgba(0,0,0,0.8); padding: 10px; }
     </style>
 </head>
 <body>
-    <div id="info">
-        <h2 id="status">Tentando carregar carro.glb...</h2>
-        <p>Se vir um CUBO VERMELHO, o arquivo do carro está com problema.</p>
-    </div>
+    <div id="ui"><div class="timer" id="timerDisplay">00:00.00</div></div>
+    <div id="status">Carregando Mercedes...</div>
 
     <script type="module">
         import * as THREE from 'https://cdn.skypack.dev/three@0.136.0';
         import { GLTFLoader } from 'https://cdn.skypack.dev/three@0.136.0/examples/jsm/loaders/GLTFLoader.js';
 
         const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(0, 5, 10);
+        scene.background = new THREE.Color(0x87CEEB);
 
-        const renderer = new THREE.WebGLRenderer();
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 5000);
+        camera.position.set(0, 5, 15);
+
+        const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
         scene.add(new THREE.AmbientLight(0xffffff, 2));
-        scene.add(new THREE.GridHelper(100, 20));
+        const sun = new THREE.DirectionalLight(0xffffff, 1);
+        sun.position.set(10, 20, 10);
+        scene.add(sun);
 
-        // CRIAR UM CUBO DE RESERVA (Caso o carro falhe)
-        const geometry = new THREE.BoxGeometry(2, 2, 2);
-        const material = new THREE.MeshBasicMaterial({ color: 0xff0000 });
-        const dummyCube = new THREE.Mesh(geometry, material);
-        dummyCube.position.y = 1;
+        scene.add(new THREE.GridHelper(200, 40, 0xffffff, 0x444444));
 
+        let car;
         const loader = new GLTFLoader();
+
+        // IMPORTANTE: O nome do arquivo tem que ser IGUAL ao que está no seu GitHub
         loader.load('carro.glb', (gltf) => {
-            // Se chegar aqui, o arquivo TEM algo dentro
-            scene.add(gltf.scene);
-            document.getElementById('status').innerText = "✅ ARQUIVO CARREGADO!";
-        }, undefined, (error) => {
-            // Se der erro, colocamos o cubo para você não ficar no escuro
-            scene.add(dummyCube);
-            document.getElementById('status').innerText = "❌ ARQUIVO NÃO ENCONTRADO - USANDO CUBO DE TESTE";
+            car = gltf.scene;
+            
+            // --- REPARAÇÃO TOTAL DO MODELO ---
+            const box = new THREE.Box3().setFromObject(car);
+            const center = box.getCenter(new THREE.Vector3());
+            const size = box.getSize(new THREE.Vector3());
+
+            // 1. Reseta a posição para o centro do mundo (0,0,0)
+            car.position.x += (car.position.x - center.x);
+            car.position.y += (car.position.y - center.y) + (size.y / 2); // Faz o pneu tocar o chão
+            car.position.z += (car.position.z - center.z);
+
+            // 2. Força uma escala visível (ajustada para os dados que você mandou)
+            const maxDim = Math.max(size.x, size.y, size.z);
+            const scale = 10 / maxDim; 
+            car.scale.set(scale, scale, scale);
+
+            scene.add(car);
+            document.getElementById('status').innerText = "✅ MERCEDES CARREGADA! Use as setas.";
+        }, 
+        undefined, 
+        (error) => {
+            document.getElementById('status').innerText = "❌ ERRO: Verifique se o nome no GitHub é 'carro.glb'";
         });
+
+        const keys = {};
+        let startTime = Date.now();
+        window.addEventListener('keydown', e => keys[e.code] = true);
+        window.addEventListener('keyup', e => keys[e.code] = false);
 
         function animate() {
             requestAnimationFrame(animate);
+            if (car) {
+                // Movimento (tentando os eixos principais)
+                if(keys['ArrowUp']) car.translateZ(0.5); 
+                if(keys['ArrowDown']) car.translateZ(-0.3);
+                if(keys['ArrowLeft']) car.rotation.y += 0.05;
+                if(keys['ArrowRight']) car.rotation.y -= 0.05;
+
+                const camOffset = new THREE.Vector3(0, 6, -15).applyMatrix4(car.matrixWorld);
+                camera.position.lerp(camOffset, 0.1);
+                camera.lookAt(car.position);
+            }
+            const d = new Date(Date.now() - startTime);
+            document.getElementById('timerDisplay').innerText = d.toISOString().substr(14, 8);
             renderer.render(scene, camera);
         }
         animate();
