--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>DETRAN 3D - MERCEDES AMG</title>
+    <title>DETRAN 3D - FERRARI ROMA</title>
     <style>
         body { margin: 0; overflow: hidden; background: #87CEEB; font-family: sans-serif; }
-        #ui { position: absolute; top: 20px; left: 50%; transform: translateX(-50%); text-align: center; width: 100%; z-index: 10; }
-        .timer { font-size: 40px; font-weight: bold; color: #fff; background: rgba(0,0,0,0.8); padding: 10px 40px; border-radius: 15px; border: 2px solid #00ff44; }
-        #status { position: fixed; bottom: 20px; width: 100%; text-align: center; color: white; background: rgba(0,0,0,0.8); padding: 10px; font-weight: bold; }
+        #status { position: fixed; bottom: 20px; width: 100%; text-align: center; color: white; background: rgba(0,0,0,0.8); padding: 10px; z-index: 100; }
     </style>
 </head>
 <body>
-    <div id="ui"><div class="timer" id="timerDisplay">00:00.00</div></div>
-    <div id="status">📡 Tentando localizar 'carro.glb'...</div>
+    <div id="status">Buscando arquivo: low_poly_ferrari_roma.glb...</div>
 
     <script type="module">
         import * as THREE from 'https://cdn.skypack.dev/three@0.136.0';
@@ -21,80 +18,63 @@
         const scene = new THREE.Scene();
         scene.background = new THREE.Color(0x87CEEB);
 
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 10000);
-        camera.position.set(0, 5, 15);
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.set(0, 5, 12);
 
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         renderer.outputEncoding = THREE.sRGBEncoding;
         document.body.appendChild(renderer.domElement);
 
-        scene.add(new THREE.AmbientLight(0xffffff, 2));
-        const light = new THREE.DirectionalLight(0xffffff, 1.5);
-        light.position.set(5, 10, 5);
-        scene.add(light);
+        // Luzes para destacar a lataria
+        scene.add(new THREE.AmbientLight(0xffffff, 1.5));
+        const sun = new THREE.DirectionalLight(0xffffff, 1);
+        sun.position.set(5, 10, 7);
+        scene.add(sun);
 
-        // Grade de referência para você ver o chão
-        scene.add(new THREE.GridHelper(500, 50, 0xffffff, 0x555555));
+        // Chão e Pista
+        scene.add(new THREE.GridHelper(200, 50));
+        const road = new THREE.Mesh(new THREE.PlaneGeometry(20, 2000), new THREE.MeshStandardMaterial({color: 0x222222}));
+        road.rotation.x = -Math.PI / 2;
+        scene.add(road);
 
         let car;
         const loader = new GLTFLoader();
 
-        // ⚠️ IMPORTANTE: O nome abaixo deve ser IGUAL ao do arquivo no seu GitHub
-        const arquivo = '2016_mercedes-benz_gle63_amg_coupe (1).glb'; 
-
-        loader.load(arquivo, (gltf) => {
+        // USANDO O NOME EXATO DO SEU ARQUIVO
+        loader.load('low_poly_ferrari_roma.glb', (gltf) => {
             car = gltf.scene;
             
-            // --- BOX DE CENTRALIZAÇÃO ---
-            const box = new THREE.Box3().setFromObject(car);
-            const center = box.getCenter(new THREE.Vector3());
-            const size = box.getSize(new THREE.Vector3());
-
-            // 1. Move o carro para o ponto zero absoluto
-            car.position.x = -center.x;
-            car.position.y = -center.y + (size.y / 2); // Toca o chão
-            car.position.z = -center.z;
-
-            // 2. Ajusta a escala (os dados mostram que ele é pequeno, vamos aumentar)
-            const maxDim = Math.max(size.x, size.y, size.z);
-            const escala = 10 / maxDim; // Força ele a ter 10 unidades de tamanho
-            car.scale.set(escala, escala, escala);
-
+            // Ajuste de escala (como é low poly, 1.5 deve ser o tamanho ideal)
+            car.scale.set(1.5, 1.5, 1.5);
+            
             scene.add(car);
-            document.getElementById('status').style.backgroundColor = "green";
-            document.getElementById('status').innerText = "✅ MERCEDES LOCALIZADA! USE AS SETAS.";
+            document.getElementById('status').innerText = "✅ FERRARI ROMA CARREGADA! Use as setas.";
         }, 
         (xhr) => {
             const p = Math.round((xhr.loaded / xhr.total) * 100);
-            document.getElementById('status').innerText = "Baixando: " + p + "%";
-        }, 
+            document.getElementById('status').innerText = "Carregando: " + p + "%";
+        },
         (error) => {
-            document.getElementById('status').style.backgroundColor = "red";
-            document.getElementById('status').innerText = "❌ ERRO: Arquivo não encontrado. Verifique o nome!";
+            document.getElementById('status').innerText = "❌ ERRO: O arquivo 'low_poly_ferrari_roma.glb' não está no GitHub!";
         });
 
         const keys = {};
-        let startTime = Date.now();
         window.addEventListener('keydown', e => keys[e.code] = true);
         window.addEventListener('keyup', e => keys[e.code] = false);
 
         function animate() {
             requestAnimationFrame(animate);
             if (car) {
-                // Movimento (usando os eixos que a Mercedes prefere)
-                if(keys['ArrowUp']) car.translateZ(0.5); 
-                if(keys['ArrowDown']) car.translateZ(-0.3);
+                if(keys['ArrowUp']) car.translateZ(0.4); 
+                if(keys['ArrowDown']) car.translateZ(-0.2);
                 if(keys['ArrowLeft']) car.rotation.y += 0.05;
                 if(keys['ArrowRight']) car.rotation.y -= 0.05;
 
-                // Câmera segue o carro
-                const offset = new THREE.Vector3(0, 8, -20).applyMatrix4(car.matrixWorld);
+                const offset = new THREE.Vector3(0, 4, -10).applyMatrix4(car.matrixWorld);
                 camera.position.lerp(offset, 0.1);
                 camera.lookAt(car.position);
             }
-            const d = new Date(Date.now() - startTime);
-            document.getElementById('timerDisplay').innerText = d.toISOString().substr(14, 8);
             renderer.render(scene, camera);
         }
         animate();
